<resources>
    <string name="app_name">QrVentory</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="button_search_no">Status: Device is not selected</string>
    <string name="button_search">"Device selected: "</string>

    <string name="edittext_input_data"></string>

    <string name="radiobutton_text">Add Text:</string>
    <string name="radiobutton_qrcode">QRCode</string>

    <string name="checkBox_text">Add Text:</string>

    <string name="button_print">Print</string>

    <string name="title_discover_printer">Discover Printer</string>

    <string name="button_select_xml_no">Select: Form type is not selected</string>
    <string name="function_name_select_xml">Form Type</string>
    <string name="function_name_choose_barcode_type">Choose barcode type</string>
    <string name="button_select_xml_all">All</string>
    <string name="button_choose_barcode_type_ok">Done</string>
    <string name="button_select_xml_ok">Done</string>
    <string name="text_result">N/A</string>
    <string name="text_view_printing_page">N/A</string>

    <!-- PrintSettings -->
    <string name="text_print_settings_title">Print Settings</string>
    <string name="text_copies_setting">Copies:</string>
    <string name="text_tape_cut_setting">Tape Cut:</string>
    <string name="text_half_cut_setting">Half Cut:</string>
    <string name="text_low_speed_setting">Low Speed:</string>
    <string name="text_density_setting">Density:</string>
    <string name="text_sdk_version_setting">SDK Version:</string>
    <string name="text_description_print_settings_ok_button">Done</string>
    <string name="button_print_settings_ok">Done</string>
    <string name="toggle_text_on">ON</string>
    <string name="toggle_text_off">OFF</string>
    <string name="radio_each">Each</string>
    <string name="radio_after">After</string>
    <string name="radio_none">None</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="function_name_setting_type">Settings</string>
    <string name="text_view_printer_connection">Device connected: None </string>
    <string name="title_activity_event_check">EventCheckActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_event_single">EventSingleActivity</string>

    <!-- Events -->
    <string name="button_event_start">Start Event</string>
    <string name="title_activity_tabbed_events">TabbedEventsActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tabbed_event_single">TabbedEventSingleActivity</string>

</resources>
